[workspace]
members = [
    "tempest_core",
]

[package]
name = "tempest"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
bincode = "=1.3.3"
bytes = { version = "1.11.1", features = ["serde"] }
core_affinity = "0.8.3"
crc64 = "2.0.0"
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.31"
integer-encoding = "4.1.0"
itertools = "0.14.0"
logos = "0.16.1"
nonmax = { version = "0.5.5", features = ["serde"] }
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "sync", "rt-multi-thread", "time", "fs", "io-util", "signal"] }
tokio-uring = { version = "0.5.0", features = ["bytes"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-tree = "0.4.1"
zerocopy = { version = "0.8.39", features = ["derive", "std"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
num_cpus = "1.17.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

tempest_core = { path = "./tempest_core" }

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
core_affinity = { workspace = true }
crc64 = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }
nonmax = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
xxhash-rust = { workspace = true }

tempest_core = { workspace = true }

[dev-dependencies]
tracing-tree = { workspace = true }
tempest_core = { workspace = true, features = ["testing"] }
