[workspace]
members = [
    "tempest_core",
    "tempest_kv",
    "tempest_tql",
    "tempest_engine",
]

[package]
name = "tempest-db"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "tempest"
path = "src/main.rs"

[dependencies]

[workspace.dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
bincode = "=1.3.3"
bytes = { version = "1.11.1", features = ["serde"] }
core_affinity = "0.8.3"
crc64 = "2.0.0"
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.31"
integer-encoding = "4.1.0"
itertools = "0.14.0"
logos = "0.16.1"
memchr = "2.8.0"
nonmax = { version = "0.5.5", features = ["serde"] }
num_cpus = "1.17.0"
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "sync", "rt-multi-thread", "time", "fs", "io-util", "signal"] }
tokio-uring = { version = "0.5.0", features = ["bytes"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-tree = "0.4.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zerocopy = { version = "0.8.39", features = ["derive", "std"] }

tempest_core = { path = "./tempest_core" }
tempest_kv = { path = "./tempest_kv" }
