[package]
name = "tempest_core"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:tracing-subscriber", "dep:tracing-tree"]

[dependencies]
tokio-uring = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
crc64 = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tree = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

