[package]
name = "tempest_core"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:tracing-subscriber", "dep:tracing-tree"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
crc64 = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
integer-encoding = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
tracing = { workspace = true }

# optional dependencies, only used with certain features / in test builds
tracing-subscriber = { workspace = true, optional = true }
tracing-tree = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

