[package]
name = "tempest_engine"
version = "0.0.1"
edition = "2024"
description = "The relational database engine for the Tempest database"
license = "MIT"
repository = "https://github.com/Vimthusiast/tempest"

[dependencies]
bytes = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

tempest_core = { workspace = true }
tempest_kv = { workspace = true }
tempest_tql = { workspace = true }

[dev-dependencies]
tempest_core = { workspace = true, features = ["testing"] }
tempest_tql = { workspace = true, features = ["testing"] }
