[package]
name = "tempest_kv"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
core_affinity = { workspace = true }
crc64 = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
nonmax = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
xxhash-rust = { workspace = true }

tempest_core = { workspace = true }

[dev-dependencies]
tracing-tree = { workspace = true }
tempest_core = { workspace = true, features = ["testing"] }

