[package]
name = "tempest_tql"
version = "0.0.1"
edition = "2024"
description = "TQL language implementation for the Tempest database"
license = "MIT"
repository = "https://github.com/Vimthusiast/tempest"

[features]
testing = []

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

tempest_core = { workspace = true }
